Fixed overflow for dashboard.php
Reverted back to original grid layout.
Fixed overflow issue by assigning divs a fixed width/height instead of a percentage.

--- a/CSS/dashboard.css
+++ b/CSS/dashboard.css
@@ -68,18 +68,16 @@ th {
 }
 
 .container {
-	display: grid;
+	display: grid; 
 	width: 100%;
 	height: 100%;
 	grid-template-columns: 16.66% 16.66% 16.66% 16.66% 16.66% 16.66%;
-	grid-template-rows: 50% 30% 20%;
-	padding: 5px;
+	grid-template-rows: 35% 35% 30%;
+	padding: 0px;
 	
 }
 
 .schedule {
-	width: 95%;
-	height: 85%;
 	grid-column-start: 1;
 	grid-column-end: 4;
 	grid-row-start: 1;
@@ -87,12 +85,10 @@ th {
 	padding: 0px;
 	box-shadow: 0 8px 40px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 	background-color: var(--primary);
-	margin: 20px 10px 50px 10px;
 	border-radius: 10px;
+	margin: 0 auto;
 }
 .plan {
-	width: 95%;
-	height: 85%;
 	grid-column-start: 4;
 	grid-column-end: 7;
 	grid-row-start: 1;
@@ -100,12 +96,10 @@ th {
 	padding: 0px;
 	box-shadow: 0 8px 40px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 	background-color: var(--primary);
-	margin: 20px 10px 50px 10px;
 	border-radius: 10px;
+	margin: 0 auto;
 }
 .personal_info {
-	width: 95%;
-	height: 95%;
 	grid-column-start: 1;
 	grid-column-end: 3;
 	grid-row-start: 2;
@@ -113,12 +107,10 @@ th {
 	padding: 0px;
 	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 	background-color: var(--primary);
-	margin: 0 10px 20px 10px;
 	border-radius: 10px;
+	margin: 0 auto;
 }
 .credit_info {
-	width: 95%;
-	height: 95%;
 	grid-column-start: 3;
 	grid-column-end: 5;
 	grid-row-start: 2;
@@ -126,12 +118,10 @@ th {
 	padding: 0px;
 	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 	background-color: var(--primary);
-	margin: 0 10px 20px 10px;
 	border-radius: 10px;
+	margin: 0 auto;
 }
 .advisor_info {
-	width: 95%;
-	height: 95%;
 	grid-column-start: 5;
 	grid-column-end: 7;
 	grid-row-start: 2;
@@ -139,8 +129,8 @@ th {
 	padding: 0px;
 	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 	background-color: var(--primary);
-	margin: 0 10px 20px 10px;
 	border-radius: 10px;
+	margin: 0 auto;
 }
 .progress_bar {
 	grid-column-start: 1;
@@ -150,8 +140,8 @@ th {
 	padding: 5px;
 	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 	background-color: var(--primary);
-	margin: 20px 10px;
 	border-radius: 10px;
+	margin: 0 auto;
 }
 .schedule_table {
 	width: 100%;
@@ -167,19 +157,16 @@ th {
 
 }
 .dash_info {
-	width: 100%;
-	height: 100%;
+	height: 90%;
 	background-color: var(--tertiary);
 	border-radius: 10px;
 }
 .table_area {
-	height: 80%;
-	width: 98%;
+	height: 90%;
 	margin: auto;
 }
 .info_area {
-	height: 70%;
-	width: 98%;
+	height: 100%;
 	margin: auto;
 }
 .progress {
@@ -191,4 +178,5 @@ th {
 	font-size: 15px;
 	border-radius: 10px;
 	height: 60%;
+	margin: 10px auto 0 0;
 }
